init auth and groups